--- a/web_container/Gemfile
+++ b/web_container/Gemfile
@@ -7,7 +7,7 @@ git_source(:github) do |repo_name|
   "https://github.com/#{repo_name}.git"
 end
 
-path 'components' do
+path '../components' do
   gem 'app_component'
 end
 
