--- a/components/predictor/Gemfile
+++ b/components/predictor/Gemfile
@@ -1,6 +1,8 @@
 source "https://rubygems.org"
 
-git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
-
 # Specify your gem's dependencies in predictor.gemspec
 gemspec
+
+gem "trueskill",
+  git: "https://github.com/benjaminleesmith/trueskill",
+  ref: "e404f45af5b3fb86982881ce064a9c764cc6a901"
