--- a/components/app_component/Gemfile
+++ b/components/app_component/Gemfile
@@ -15,3 +15,7 @@ gemspec
 gem "trueskill",
   git: "https://github.com/benjaminleesmith/trueskill",
   ref: "e404f45af5b3fb86982881ce064a9c764cc6a901"
+
+path "../" do
+  gem "predictor"
+end
