--- a/components/games_admin/Gemfile
+++ b/components/games_admin/Gemfile
@@ -12,3 +12,10 @@ gemspec
 
 # To use a debugger
 # gem 'byebug', group: [:development, :test]
+gem "trueskill",
+  git: "https://github.com/benjaminleesmith/trueskill",
+  ref: "e404f45af5b3fb86982881ce064a9c764cc6a901"
+
+path "../" do
+  gem "app_component"
+end
